# lexa-database

./: Cargo.toml
src/: error.rs  interface.rs  lib.rs
src/sgbd/: postgres.rs
tests/: connection_postgres.rs
