[package]
name = "lexa-database"
version = "0.1.3"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/PhiSyX/lexa-database"
description = "Accès aux bases de données via SQLx"

[features]
# default = ["postgres-sgbd"]
postgres-sgbd = ["sqlx/postgres"]

[dependencies]
async-trait = "^0.1"
sqlx = { version = "^0.7", features = ["runtime-tokio"] }
thiserror = { version = "^1.0" }

[dev-dependencies]
tokio = { version = "^1.32", features = ["macros", "test-util"] }

[[test]]
name = "test_connection_postgres"
path = "tests/connection_postgres.rs"
required-features = ["postgres-sgbd"]
